<resources>
    <string name="app_name">DietPro App</string>
    <string name="title_activity_navigasi">NavigasiActivity</string>
    <string name="title_home">Home</string>
    <string name="title_order">Order</string>
    <string name="title_statistik">Statistik</string>
    <string name="title_konsultasi">Konsultasi</string>
    <string name="title_chat">Chat</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="username">Username</string>
    <string name="acctype">Tipe Akun</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recyclerviewError">tidak ada data</string>
    <string name="place_holder">Place Holder</string>
    <string name="checkbox">CheckBox</string>
    <string name="default_notification_channel_id" translatable="false">dietproapp</string>
</resources>