<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_order"
        android:icon="@drawable/order"
        android:title="@string/title_order" />

    <item
        android:id="@+id/navigation_statistik"
        android:icon="@drawable/statistik"
        android:title="@string/title_statistik" />

    <item
        android:id="@+id/navigation_konsultasi"
        android:icon="@drawable/konsultasi_ic"
        android:title="@string/title_konsultasi" />

<!--    <item-->
<!--        android:id="@+id/navigation_chat"-->
<!--        android:icon="@drawable/chat"-->
<!--        android:title="@string/title_chat" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_dashboard"-->
<!--        android:icon="@drawable/ic_dashboard_black_24dp"-->
<!--        android:title="@string/title_dashboard" />-->

<!--    <item-->
<!--        android:id="@+id/navigation_notifications"-->
<!--        android:icon="@drawable/ic_notifications_black_24dp"-->
<!--        android:title="@string/title_notifications" />-->

    <item
        android:id="@+id/navigation_profil"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_profil" />

</menu>