<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.dietproapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_order"
        android:name="com.example.dietproapp.ui.order.OrderFragment"
        android:label="@string/title_order"
        tools:layout="@layout/fragment_order" />

    <fragment
        android:id="@+id/navigation_statistik"
        android:name="com.example.dietproapp.ui.statistik.StatistikFragment"
        android:label="@string/title_statistik"
        tools:layout="@layout/fragment_statistik" />

<!--    <fragment-->
<!--        android:id="@+id/navigation_konsultasi"-->
<!--        android:name="com.example.dietproapp.ui.konsultasi.KonsultasiFragment"-->
<!--        android:label="@string/title_konsultasi"-->
<!--        tools:layout="@layout/fragment_konsultasi" />-->

<!--    <fragment-->
<!--        android:id="@+id/navigation_chat"-->
<!--        android:name="com.example.dietproapp.ui.chat.ChatFragment"-->
<!--        android:label="@string/title_chat"-->
<!--        tools:layout="@layout/fragment_chat" />-->

</navigation>