<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:backgroundTint="@color/background"
    tools:context=".ui.home.HomeFragment">

    <FrameLayout
        android:id="@+id/fl"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/background">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_header"
            android:layout_width="match_parent"
            android:layout_height="97dp"
            android:background="@drawable/bg_header_home"
            android:backgroundTint="@color/primary"
            android:padding="10dp"
            android:paddingStart="20dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profile"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                app:cardCornerRadius="@dimen/_25sdp"
                tools:ignore="MissingConstraints">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/tv_inisialProfil"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/secondary"
                        android:fontFamily="@font/poppins_bold"
                        android:gravity="center"
                        android:text="AB"
                        android:textSize="@dimen/_22ssp" />

                    <ImageView
                        android:id="@+id/img_Profil"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/username"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/profile"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/image_menu"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="24dp"
                android:clickable="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/notif"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_username"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/tv_tipeakun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/acctype"
                android:textColor="@color/white"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/profile"
                app:layout_constraintTop_toTopOf="@id/tv_username" />


        </androidx.constraintlayout.widget.ConstraintLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:overScrollMode="never"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_widgetnt">


                <TextView
                    android:id="@+id/tv_nutrisi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Nutrisi"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <ImageView
                    android:id="@+id/img_info"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="17dp"
                    android:clickable="true"
                    android:src="@drawable/info"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/tv_nutrisi"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.146"
                    tools:ignore="MissingConstraints" />

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/calories"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_nutrisi"
                    tools:ignore="MissingConstraints" />

                <TextView
                    android:id="@+id/tv_kalori"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="Kalori Asupan Harian"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    app:layout_constraintTop_toBottomOf="@+id/tv_nutrisi" />

                <TextView
                    android:id="@+id/tv_tracking_kalori"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginEnd="20dp"
                    android:fontFamily="@font/poppins_medium"
                    android:text="2.200/2.200"
                    android:textColor="@color/white"
                    android:textSize="10sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>



    </FrameLayout>

</RelativeLayout>


